@@ -1,54 +1,0 @@
-<html>
- <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <title>$title$ - FunGEn game engine</title>
-  <style>
-   body {
-     padding:0 10%;
-     background-color:white;
-     color:black;
-     font-family: 'Trebuchet MS', Helvetica, sans-serif;
-     }
-
-   h1, h2 {
-     position:relative;
-     left:-0.5em;
-     margin-top:1.5em;
-     }
-
-   h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
-     color:black;
-     text-decoration:none;
-     }
-
-   #TOC {
-    float:right;
-    margin:0 0 1em 1em;
-    border:thin solid #ddd;
-    background-color:#f0f0f0;
-   }
-
-   #TOC ul {
-    list-style-type: none;
-    padding:0 1em 0 1em;
-   }
-
-   pre {
-     background-color:#f0f0f0;
-     color:#000;
-     padding:0.5em;
-     margin:0;
-     display:inline-block;
-     border-radius:4px;
-     }
-
-   code {
-     font-family: 'Lucida Console', Monaco, monospace;
-     /*font-size:smaller;*/
-     }
-  </style>
- </head>
- <body>
-  $body$
- </body>
-</html>
